--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <header>
-        <img src="imagens/logo300redondo.png" alt="logo">
-        <h1>K.F Empréstimos</h1>
-        <p>Seu Correspondente Bancário de Confiança para Empréstimos Consignados</p>
+
+        <div class="container">
+            <div class="filho">
+                <img src="imagens/logo300redondo.png" alt="logo">
+                <h1>K.F Empréstimos</h1>
+                <p>Seu Correspondente Bancário de Confiança para Empréstimos Consignados</p>
+            </div>
+        </div>
+        
     </header>
 
     <nav>
