--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
 
         <div class="itensprincipal">
             <section>
-                <h1>Empréstimos Consignado</h1>
+                <h2>Empréstimos Consignado</h2>
                 <p>Oferecemos empréstimos consignados com as melhores taxas do mercado para servidores públicos, aposentados e pensionistas do INSS.</p>
             </section>
             
             <section>
                 <h2>Refinanciamento</h2>
-                <p>Possibilidade de refinanciar seu empréstimos consignado,proporcionando melhores condições e taxas mais atrativas</p>
+                <p>Possibilidade de refinanciar seus empréstimos consignados, oferecendo melhores condições e taxas mais atrativas.
+
+                    
+                </p>
             </section>
             <section>
                 <h2>Portabilidade</h2>
