adicionado o meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Emprestimos Rápido,Fácil e sem Burocracia">
     <title>Document</title>
     <link rel="stylesheet" href="estilos/style.css">
     <script src="https://kit.fontawesome.com/9e018b46c9.js" origem cruzada="anônimo"></script>
