--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
                 <p>Estamos prontos para atendê-lo de forma personalizada, esclarecendo todas as suas dúvidas e auxiliando em todo o processo.</p>
             </section>
 
-            <div>
-                <section>
+        
+            <aside class="simulacao">
+                <div class="simulacao.itens">
                     <h1>Solicitação de simulacão</h1>
                     <p>Faça uma simulacão agora mesmo </p>
-                </section>
-            </div>
+                </div>
+            </aside>
+            
         </div>
     </main>
 </body>
