--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>Nossos Serviços</h2>
 
         <div class="itensprincipal">
-            <section>
+            <section class="empres">
                 <h2>Empréstimos Consignado</h2>
                 <p>Oferecemos empréstimos consignados com as melhores taxas do mercado para servidores públicos, aposentados e pensionistas do INSS.</p>
             </section>
