--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         
     </header>
-
+    <i id="icone-menu"  class="fa-solid fa-bars fa-2x"></i>
     <nav>
         
         <a href="#">Home</a>
