--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
         <div class="container">
 
-            <h1>K F Empréstimos</h1>
+            <h1>K F</h1>
+            <h1>Empréstimos</h1>
             <p><strong>Seu Correspondente Bancário de Confiança para Empréstimos Consignados</strong></p>
             
         </div>
@@ -37,7 +38,7 @@
         <h2>Nossos Serviços</h2>
 
         <div class="itensprincipal">
-            <section class="empres">
+            <section>
                 <h2>Empréstimos Consignado</h2>
                 <p>Oferecemos empréstimos consignados com as melhores taxas do mercado para servidores públicos, aposentados e pensionistas do INSS.</p>
             </section>
